--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dockerode": "^4.0.5",
     "express": "~4.16.1",
     "get-port": "^4.2.0",
-    "morgan": "~1.9.1"
+    "http-proxy-middleware": "^3.0.3",
+    "morgan": "~1.9.1",
+    "uuid": "^11.1.0"
   }
 }
