Revert "Add iframe return"
This reverts commit 4dbdc9bc998ffaa41c8a5df2c83042280ff4f1d7.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "dockerode": "^4.0.5",
     "express": "~4.16.1",
     "get-port": "^4.2.0",
-    "http-proxy-middleware": "^3.0.3",
-    "morgan": "~1.9.1",
-    "uuid": "^11.1.0"
+    "morgan": "~1.9.1"
   }
 }
